# paper_stone_scissors

./: main.py  p.py  pyproject.toml
client/: client.html
fastapi_asyncalchemy/: managers.py  models.py  schemas.py  service.py
fastapi_asyncalchemy/db/: base.py
